# alfred_v2

./: README.md  slave_1.ino  test.ino
Nodo_Tanque_v2/: Nodo_Tanque_v2.ino
backend/: README.md  servicio_001.rs
backend/API_v1/: Cargo.toml  dockerfile
backend/CPU_services/: Cargo.toml  dockerfile
backend/CPU_services/src/: main.rs
backend/rpi_logs_nodos/: Cargo.toml  README.md  dockerfile
backend/rpi_monitor/: Cargo.toml  README.md  dockerfile
database/: README.md
frontend/: README.md
nodos/: README.md
nodos/nodo_A/: script.ino
