[package]
name = "rpi_logs_nodos"
version = "1.0.0"
edition = "2021"
authors = ["Ferjapolis"]
description = "Api de manejo de recursos para sistema domotico"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
influxdb = { version = "0.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }