[package]
name = "rpi_monitor"
version = "0.1.0"
edition = "2021"
authors = ["Ferjapolis"]
description = "API de datos de sistemas"

[[bin]]
name = "rpi_monitor"
path = "src/main.rs"

[dependencies]
actix-web = "4.4"
sysinfo = "0.32.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.6.3"
thiserror = "2.0.3"
log = "0.4"
env_logger = "0.11.5"
reqwest = "0.12.9"
bollard = "0.18.1"
futures-util = "0.3"
chrono = "0.4"